third_party/move/tools/move-unit-test/tests/test_sources/non_exsistent_native.exp
Running Move unit tests
[ FAIL    ] 0x1::M::non_existent_native
0x1::M::non_existent_native
Output: Ok(Changes { accounts: {} })

Test failures:

Failures in 0x1::M:

┌── non_existent_native ──────
│ error[E11001]: test failure
│   ┌─ non_exsistent_native.move:3:16
│   │
│ 3 │     native fun foo();
│   │                ^^^
│   │                │
│   │                INTERNAL TEST ERROR: Unexpected Verification Error
│ Test was not expected to error, but it gave a MISSING_DEPENDENCY (code 1021) error originating in the module 0x1::M rooted here
│   │                In this function in 0x1::M
│ 
│ 
└──────────────────

Test result: FAILED. Total tests: 1; passed: 0; failed: 1
